fixed white space issue

--- a/react_frontend/src/App.css
+++ b/react_frontend/src/App.css
@@ -4,9 +4,9 @@
   flex-direction: row;
   background-color: rgb(94, 94, 94);
   background-repeat: repeat;
-
   color: white;
   font-family: Jost;
+  min-height: 100vh;
   /* height: 3000000px; */
 }
 
